--- a/component/header/header.main.module.css
+++ b/component/header/header.main.module.css
@@ -24,6 +24,9 @@
   height: 5rem;
   background-color: black;
   box-shadow: 1px 7px 18px -5px black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .spacer
