--- a/component/menu/menu.main.module.css
+++ b/component/menu/menu.main.module.css
@@ -1,3 +1,15 @@
+.menuButton
+{
+	display: flex;
+  justify-content: center;
+  align-items: center;	
+	color: white;
+	font-size: 300%;
+}
+
+
+
+
 .menu
 {
 	padding: 0;
