--- a/component/header/header.main.module.css
+++ b/component/header/header.main.module.css
@@ -1,9 +1,12 @@
 .header
 {
   position: sticky;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
   width: 100%;
+  z-index: 100;
   /*
   width: calc(100% - 1rem);
   height: 3rem;
