--- a/component/layout/layout.main.module.css
+++ b/component/layout/layout.main.module.css
@@ -9,10 +9,44 @@
 
 .main
 {
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+}
+
+.innerHead
+{
+  position: relative;
+  display: flex;
+  top: -5rem;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 3.5rem;
+  align-content: center;
+  justify-content: center;
+  background-color: black;
+  color: white;
+}
+
+.inside
+{
+  overflow-y: auto;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  white-space: pre-wrap;
+}
+
+
+
+/*
+
+.main
+{
   height: calc(100% - 7rem);
   margin: 1rem;
   overflow: auto;
-  /*padding: 1rem 1rem 0;*/
   padding: 1rem;
   box-shadow: 1px 7px 32px -5px black;
 }
@@ -26,3 +60,4 @@
     box-shadow: inherit;
   }
 }
+*/
