--- a/component/menu/menu.main.module.css
+++ b/component/menu/menu.main.module.css
@@ -5,19 +5,53 @@
   align-items: center;	
 	color: white;
 	font-size: 300%;
-}
-
-
-
-
-.menu
-{
-	padding: 0;
-	margin: 0;
 	height: 100%;
 	width: 100%;
-	margin-left: 2rem;
+	cursor: pointer;
+}
+
+.menuContainer
+{
+	width: 100%;
+	height: 100%;
+}
+
+.fullscreenMenuContainer
+{
+	z-index: 9999;
+	display: none;
+	flex-direction: row-reverse;
+	background-color: rgba(0, 0, 0, 0.75);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.menuBox
+{
+	width: 15rem;
+	height: 100%;
+	background-color: #000000;
+}
+
+.menuHeader
+{
+	margin: 0;
+	font-size: 300%;
+	border-bottom: 2px solid white;
+}
+
+.menuHeader > a
+{
+	color:white;
+	text-decoration: none;
+	width: 100%;
+	height: 100%;
 	display: flex;
+	align-content: center;
+	justify-content: center;
 }
 
 .menuList
@@ -28,29 +62,31 @@
 	margin: 0;
 	list-style: none;
 	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
+	flex-direction: column;
+	justify-content: flex-start;
 }
 
-.menuEntry
+.menuEntry 
 {
 	display: flex;
-	transition: background-color 200ms linear;
-}
-
-.menuEntry:hover
-{
-	background-color: rgba(0, 0, 0, 0.1);
 }
 
 .menuEntry a
 {
 	padding: 0 0.5rem 0 0.5rem;
-	color: rgba(0, 0, 0, 0.747);
+	color: white;
 	font-weight: 999;
-	font-size: 1rem;
+	font-size: 2rem;
 	text-decoration: none;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	width: 100%;
+	transition: background-color 100ms linear, border-left-width 100ms;
+}
+
+.menuEntry a:hover
+{
+	background-color: rgba(255, 255, 255, 0.15);
+	border-left: solid white 3px;
 }
