--- a/component/layout/layout.main.module.css
+++ b/component/layout/layout.main.module.css
@@ -1,3 +1,10 @@
+.main
+{
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+}
+
 .container 
 {
   width: 100%;
@@ -7,58 +14,40 @@
   overflow: hidden;
 }
 
-.main
-{
-  overflow: auto;
-  height: 100%;
-  width: 100%;
-}
-
 .innerHead
 {
-  position: relative;
-  display: flex;
-  top: -5rem;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 3.5rem;
-  align-content: center;
-  justify-content: center;
-  background-color: black;
-  color: white;
-  box-shadow: 1px 7px 18px -5px black;
+  display: none;
 }
 
 .inside
 {
-  overflow-y: auto;
-  margin-left: 5rem;
-  margin-right: 5rem;
-  white-space: pre-wrap;
+  padding-top: 1rem;
 }
 
-
-
-/*
-
-.main
+@media (min-width:600px)
 {
-  height: calc(100% - 7rem);
-  margin: 1rem;
-  overflow: auto;
-  padding: 1rem;
-  box-shadow: 1px 7px 32px -5px black;
-}
-
-@media screen and (max-width: 30cm)
-{
-  .main
+  .innerHead
   {
-    height: calc(100% - 5rem);
-    margin: 0rem;
-    box-shadow: inherit;
+    position: relative;
+    display: flex;
+    top: -5rem;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 3.5rem;
+    align-content: center;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    box-shadow: 1px 7px 18px -5px black;
+  }
+
+  .inside
+  {
+    overflow-y: auto;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    padding: 0;
   }
 }
-*/
