--- a/component/menu/menu.main.module.css
+++ b/component/menu/menu.main.module.css
@@ -31,7 +31,7 @@
 
 .menuBox
 {
-	width: 15rem;
+	width: 80%;
 	height: 100%;
 	background-color: #000000;
 }
@@ -76,7 +76,7 @@
 	padding: 0 0.5rem 0 0.5rem;
 	color: white;
 	font-weight: 999;
-	font-size: 2rem;
+	font-size: 300%;
 	text-decoration: none;
 	display: flex;
 	justify-content: flex-start;
@@ -89,4 +89,16 @@
 {
 	background-color: rgba(255, 255, 255, 0.15);
 	border-left: solid white 3px;
+}
+
+@media (min-width:600px)
+{
+	.menuBox
+	{
+		width: 15rem;
+	}
+
+	.menuEntry a
+	{
+	}
 }
