--- a/component/style/global.css
+++ b/component/style/global.css
@@ -1,18 +1,30 @@
 @import '~material-design-icons/iconfont/material-icons.css';
 
 html,
+body,
+div
+{
+  padding: 0;
+  margin: 0;
+}
+
+html,
 body 
 {
   width: 100%;
   height: 100%;
-  padding: 0;
-  margin: 0;
   overflow: hidden;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .noselect
 {
 	user-select: none;
+}
+
+p
+{
+  padding: 1rem;
+  white-space: pre-wrap;
 }
 
 #__next
