--- a/component/layout/layout.flex.module.css
+++ b/component/layout/layout.flex.module.css
@@ -3,6 +3,9 @@
   overflow: auto;
   height: 100%;
   width: 100%;
+
+  display:flex;
+  flex-direction:column;
 }
 
 .container 
@@ -21,6 +24,7 @@
 
 .inside
 {
+  height: 100%;
   padding-top: 1rem;
 }
 
