--- a/component/style/global.css
+++ b/component/style/global.css
@@ -33,3 +33,16 @@ p
   width: 100%;
   height: 100%;
 }
+
+@media (min-width:600px)
+{
+  .hover
+  {
+    box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.30),
+                0px 3px 35px -15px rgba(0, 0, 0, 1);/*,
+                -0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
+                -0.5rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
+                0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20)*/;
+
+  }
+}
