--- a/pages/pages.index.module.css
+++ b/pages/pages.index.module.css
@@ -1,10 +1,21 @@
 .wrapper
 {
+	display: flex;
+	flex-direction: column;
 	align-self: center;
 	justify-self: center;
 }
 
 .text
 {
+	height: 100%;
 	white-space: pre-wrap;
+}
+
+@media (min-width:600px)
+{
+	.wrapper
+	{
+		margin: 2rem;
+	}
 }
