--- a/component/style/image.css
+++ b/component/style/image.css
@@ -5,3 +5,44 @@
 	height: 16px;
 	width: 100%;
 }
+
+.linkedInMini
+{
+	background-image: url(public/image/logo/linkedin/mini.png);
+	background-size: cover;
+}
+
+.linkedInFull
+{
+	background-image: url(public/image/logo/linkedin/full.png);
+	background-size: cover;
+}
+
+.githubMiniDark
+{
+	background-image: url(public/image/logo/github/dark/mini.png);
+	background-size: cover;
+}
+
+.githubFullDark
+{
+	background-image: url(public/image/logo/github/dark/full.png);
+	background-size: cover;
+}
+
+.githubMiniLight
+{
+	background-image: url(public/image/logo/github/light/mini.png);
+	background-size: cover;
+}
+
+.githubFullLight
+{
+	background-image: url(public/image/logo/github/light/full.png);
+	background-size: cover;
+}
+
+img
+{
+	border: 0;
+}
