--- a/component/style/global.css
+++ b/component/style/global.css
@@ -39,18 +39,6 @@ p
   height: 100%;
 }
 
-@media (min-width:600px)
-{
-  .hover
-  {
-    box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.30),
-                0px 3px 35px -15px rgba(0, 0, 0, 1);/*,
-                -0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
-                -0.5rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
-                0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20)*/;
-
-  }
-}
 .wrapper
 {
 	display: flex;
@@ -65,5 +53,20 @@ p
 	.wrapper
 	{
 		margin: 2rem;
-	}
+  }
+  
+  .hover
+  {
+    box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.30),
+                0px 3px 35px -15px rgba(0, 0, 0, 1);/*,
+                -0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
+                -0.5rem 0.5rem 1rem 0rem rgba(0, 0, 0, 0.20),
+                0.5rem -0.5rem 1rem 0rem rgba(0, 0, 0, 0.20)*/;
+
+  }
+}
+
+button
+{
+  cursor: pointer;
 }
