--- a/component/header/header.main.module.css
+++ b/component/header/header.main.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   z-index: 100;
   background-color: black;
-  pointer-events: none;;
+  pointer-events: none;
 }
 
 .nav
@@ -24,11 +24,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  pointer-events: all;
 }
  
 .logo
 {
   border-radius: 0 0 30px 0;
+  pointer-events: all;
 }
 
 .menu
